update fonts and fix a link

--- a/privacy/index.html
+++ b/privacy/index.html
@@ -2,11 +2,9 @@
 <html lang="en">
 <head>
 
-<link rel="canonical" href="https://adamperkowski.dev>
+<link rel="canonical" href="https://adamperkowski.dev">
 
 <link rel="stylesheet" href="../style.css">
-
-<link href='https://fonts.googleapis.com/css?family=Noto+Sans' rel='stylesheet'>
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
