--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <!-- <p><a href="https://wakatime.com/@adamperkowski" target="_blank">Full Coding Stats</a> -->
 
-<h2>Links:</h2><p><a href="https://github.com/adamperkowski/highlightos" target="_blank">🌄 HighlightOS</a><br><br><a href="mailto:adas1per@protonmail.com">adas1per@protonmail.com</a><br><br><a href="https://github.com/adamperkowski" target="_blank">🐈‍⬛ GitHub</a> • <a href="https://floss.social/@xx0a_q" rel="me" target="_blank">Ⓜ️ Mastodon</a> • <a href="https://signal.me/#eu/soGztmBh8pJ75fu3ZRkOUc-Zp4bH0BLEaHy_lxWc7Ijs_TBtUitOKbDwMxRJp-Be" target="_blank">📡 Signal</a><br>Discord • @xx0a_q</p>
+<h2>Links:</h2><p><a href="https://os.adamperkowski.dev" target="_blank">🌄 HighlightOS</a><br><br><a href="mailto:adas1per@protonmail.com">adas1per@protonmail.com</a><br><br><a href="https://github.com/adamperkowski" target="_blank">🐈‍⬛ GitHub</a> • <a href="https://floss.social/@xx0a_q" rel="me" target="_blank">Ⓜ️ Mastodon</a> • <a href="https://signal.me/#eu/soGztmBh8pJ75fu3ZRkOUc-Zp4bH0BLEaHy_lxWc7Ijs_TBtUitOKbDwMxRJp-Be" target="_blank">📡 Signal</a><br>Discord • @xx0a_q</p>
 
 <p><a href="https://raw.githubusercontent.com/adamperkowski/adamperkowski/main/ecc_pub_key" target="_blank">🔑 ECC Public Key</a>
 <br>
