--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <h1>hello world</h1>
 <p>I'm a programmer with 6 years of experience. I work in Rust, C, C++, Python, HTML, JavaScript and x86_64 Assembly.<br>Looking to collaborate on any fun project. (i love Rust btw)<br>This is a tor mirror.</p>
 
-<h2>Links (CLEARNET):</h2><p><a href="https://os.adamperkowski.dev" target="_blank">HighlightOS</a><br><br><a href="mailto:adas1per@protonmail.com">adas1per@protonmail.com</a><br><br><a href="https://github.com/adamperkowski" target="_blank">GitHub</a> | <a href="https://floss.social/@xx0a_q" rel="me" target="_blank">Mastodon</a> | <a href="https://signal.me/#eu/soGztmBh8pJ75fu3ZRkOUc-Zp4bH0BLEaHy_lxWc7Ijs_TBtUitOKbDwMxRJp-Be" target="_blank">Signal</a><br>Discord | @xx0a_q</p>
+<h2>Links (CLEARNET):</h2><p><a href="https://os.adamperkowski.dev" target="_blank">HighlightOS</a><br><br><a href="mailto:adas1per@protonmail.com">adas1per@protonmail.com</a><br><br><a href="https://github.com/adamperkowski" target="_blank">GitHub</a> | <a href="https://floss.social/@xx0a_q" rel="me" target="_blank">Mastodon</a> | <a href="https://signal.me/#eu/soGztmBh8pJ75fu3ZRkOUc-Zp4bH0BLEaHy_lxWc7Ijs_TBtUitOKbDwMxRJp-Be" target="_blank">Signal</a><br>Discord | <a href="https://discord.com/users/1101820235566305290" target="_blank">@xx0a_q</a></p>
 
 <p><a href="https://raw.githubusercontent.com/adamperkowski/adamperkowski/main/ecc_pub_key" target="_blank">ECC Public Key</a><br>00F6 1623 FB56 BC5B B709  4E63 4CE6 C117 2DF6 BE79</p>
 <p><a href="https://raw.githubusercontent.com/adamperkowski/adamperkowski/main/rsa_pub_key" target="_blank">RSA Public Key</a> (git; sign-only)<br>5A53 0832 DA91 20B0 CA57  DDB6 7CBD B58E CF1D 3478</p>
