update cpu cooler

--- a/donate/pc-build.html
+++ b/donate/pc-build.html
@@ -17,7 +17,7 @@
 
 <h1><b><a href=".." hreflang="en" style="color: #cdd6f4; text-decoration:none;">Adam Perkowski</a></b></h1>
 
-<h2><a href="https://pcpartpicker.com/list/znkVkJ">PCPartPicker Part List</a></h2>
+<h2><a href="https://pcpartpicker.com/list/LHHJ6D">PCPartPicker Part List</a></h2>
 <table class="pcpp-part-list">
   <thead>
     <tr>
@@ -36,7 +36,7 @@
     </tr>
     <tr>
       <td class="pcpp-part-list-type">CPU Cooler</td>
-      <td class="pcpp-part-list-item"><a href="https://pcpartpicker.com/product/q6H7YJ/thermalright-assassin-x-120-refined-se-6617-cfm-cpu-cooler-ax120-se-d3">Thermalright Assassin X 120 Refined SE 66.17 CFM CPU Cooler</a></td>
+      <td class="pcpp-part-list-item"><a href="https://pcpartpicker.com/product/9T92FT/deepcool-ak620-6899-cfm-cpu-cooler-r-ak620-bknnmt-g">Deepcool AK620 68.99 CFM CPU Cooler</a></td>
       <td class="pcpp-part-list-price">
         $30.00
       </td>
