--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <footer>
 	<div style="position: relative; display: flex; justify-content: center; align-items: center;">
-	<p style="font-size: 14px; text-align: center;"><a href="https://github.com/adamperkowski/adamperkowski.github.io">This website's source code</a><br>&#127279; Adam Perkowski. Licensed under <a href="https://www.gnu.org/licenses/gpl-3.0.html" hreflang="en" target="_blank">GNU General Public License v3</a> :)<br><a href="privacy">Privacy Policy</a></p>
+	<p style="font-size: 14px; text-align: center;"><a href="https://github.com/adamperkowski/adamperkowski.github.io">This website's source code</a><br>&#169; Adam Perkowski. Licensed under the <a href="https://github.com/adamperkowski/adamperkowski.github.io/blob/static/LICENSE" hreflang="en" target="_blank">MIT License</a> :)<br><a href="privacy">Privacy Policy</a></p>
 	<img class="hide-on-mobile" style="position: absolute; right: 0;" alt="Now Listening" title="Now Listening" src="https://spotify-github-profile.kittinanx.com/api/view?uid=31j7fpw3stn5mo6almqx6m3cwjca&cover_image=true&theme=novatorem&show_offline=true&background_color=1e1e2e&interchange=true&bar_color=f38ba8&bar_color_cover=true">
 	</div>
 </footer>
