--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <h1><b><a href="." hreflang="en" style="color: #cdd6f4; text-decoration:none;">Adam Perkowski</a></b></h1>
 <h1>hello world</h1>
-<p>I'm a programmer with 6 years of experience. I work in Rust, C, C++, Python, HTML, JavaScript and x86_64 Assembly.<br>Looking to collaborate on any fun project. (i love Rust btw)</p>
+<p>I'm a programmer with 6 years of experience. I work in Rust, C, C++, Python, Go, JavaScript and C#.<br>Looking to collaborate on any fun project. (i love Rust btw)</p>
 
 <!-- <iframe src="https://github-readme-stats.vercel.app/api/wakatime?username=adamperkowski&layout=compact&theme=transparent" width="495" height="180"></iframe> -->
 <a href="https://wakatime.com/@adamperkowski" hreflang="en" target="_blank"><img alt="WakaTime Hours" src="https://wakatime.com/badge/user/018ee348-2a71-4b7e-91e6-4ac78f3e6e37.svg"></a>
