--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <h1><b><a href="." hreflang="en" style="color: #cdd6f4; text-decoration:none;">Adam Perkowski</a></b></h1>
 <h1>hello world</h1>
-<p>I'm a programmer with 6 years of experience. I work in Rust, C, C++, Python, HTML, JavaScript and x86_64 Assembly.<br>Looking to collaborate on any fun project. (i love Rust btw)<br>This is a tor mirror.</p>
+<p>I'm a programmer with 6 years of experience. I work in Rust, C, C++, Python, Go, JavaScript and C#.<br>Looking to collaborate on any fun project. (i love Rust btw)<br>This is a tor mirror.</p>
 
 <h2>Links (CLEARNET):</h2><p><a href="https://os.adamperkowski.dev" target="_blank">HighlightOS</a><br><br><a href="mailto:adas1per@protonmail.com">adas1per@protonmail.com</a><br><br><a href="https://github.com/adamperkowski" target="_blank">GitHub</a> | <a href="https://floss.social/@xx0a_q" rel="me" target="_blank">Mastodon</a> | <a href="https://signal.me/#eu/soGztmBh8pJ75fu3ZRkOUc-Zp4bH0BLEaHy_lxWc7Ijs_TBtUitOKbDwMxRJp-Be" target="_blank">Signal</a><br>Discord | <a href="https://discord.com/users/1101820235566305290" target="_blank">@xx0a_q</a></p>
 
