--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <h3><a href="donate" hreflang="en">Donate (TOR)</a></h3>
 
 <footer>
-	<p style="font-size: 14px;"><a href="https://github.com/adamperkowski/adamperkowski.github.io">This website's source code (CLEARNET)</a><br>&#169; Adam Perkowski. Licensed under the <a href="https://github.com/adamperkowski/adamperkowski.github.io/blob/static_tor/LICENSE" hreflang="en" target="_blank">GNU General Public License v3 (CLEARNET)</a> :)<br><a href="privacy">Privacy Policy</a></p>
+	<p style="font-size: 14px;"><a href="https://github.com/adamperkowski/adamperkowski.github.io">This website's source code (CLEARNET)</a><br>&#169; Adam Perkowski. Licensed under the <a href="https://github.com/adamperkowski/adamperkowski.github.io/blob/static_tor/LICENSE" hreflang="en" target="_blank">MIT License</a> :)<br><a href="privacy">Privacy Policy</a></p>
 </footer>
 
 </body>
